# aniphys

./: .gitignore  GridSpec.html  GridSpec.md  README.html  README.md  STUDENT_GUIDE.html  STUDENT_GUIDE.md  TODO.md  examples.ipynb  pyproject.toml
docs/: AnimationLogicSpec.md  CurveSpec.md  GraphMatrixSpec.md  GraphSpec.md  LegendTrackerSpec.md  ValidationErrorSpec.html  ValidationErrorSpec.md
examples/: 01_minimal_template.py  02_example_animation.py  03_sinkx.py  04_how_parameters_work.py  05_several_changing_parameters.py  06_multiple_axes.py  07_multiple_curves_same_axes.py  08_shared_parameter_across_axes.py  09_combining_axes_and_curves.py  10_editing_figure.py  11_legend_tracker.py
src/aniphys/: __init__.py  animate.py  animation_logic.py  frame_objects.py  type_defs.py
