[project]
name = "aniphys"
version = "0.1.0"
description = "Simple library to easily animate mathematical formuale."
readme = "README.md"
authors = [
    { name = "nicojwn", email = "nicolas.nemec@stud.uni-heidelberg.de" }
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "tqdm",
]
license = "MIT"
keywords = ["physics", "animation", "matplotlib", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]


[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
